fix editing ui is hard to use when the title too long rollback editing ui (shorter editing textarea)

--- a/src/scss/edit.view.scss
+++ b/src/scss/edit.view.scss
@@ -6,9 +6,14 @@
     margin: 0;
     padding: 0;
     .item-input-wrapper {
-      padding-top: 4px;
-      padding-bottom: 4px;
+      width: 100%;
       border-bottom: 1px solid $border-color;
+      input {
+        width: 100%;
+        height: 40px;
+        padding: 4px 8px;
+        word-break: break-word;
+      }
     }
   }
 
@@ -25,14 +30,17 @@
     .item-input-wrapper {
       border-radius: 0;
       background-color: $card-bg-color;
-
+      padding: 0;
+      margin: 0;
       textarea {
-        padding: 8px 0;
+        padding: 8px;
+        margin: 0;
         background-color: $card-bg-color;
         width: 100%;
-        height: 2000px;
-        overflow-y: hidden;
+        height: 256px;
         resize: none;
+        border-bottom: 1px solid $border-color;
+        border-radius: 0;
       }
     }
   }
